--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "react": "^18",
