--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@radix-ui/react-popover": "^1.1.15",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
-    "lucide-react": "^0.390.0",
+    "lucide-react": "^0.562.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-grid-layout": "^2.1.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-animate": "^0.2.10",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
