--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^16.1.4",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-grid-layout": "^2.1.0",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.4.0",
